common: disable soft keys

--- a/DeviceParts/res/values/strings.xml
+++ b/DeviceParts/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Advanced settings</string>
     <string name="button_backlight_title_head">Button backlight</string>
+    <string name="button_soft_keys">Soft Keys</string>
 </resources>
